# adk-samples

.github/workflows/: gemini-pr-review.yml
go/agents/boat-agent/: README.md  instruction.md  main.go
python/agents/academic-research/: pyproject.toml
python/agents/academic-research/deployment/: deploy.py
python/agents/academic-research/tests/: test_agents.py
python/agents/auto-insurance-agent/auto_insurance_agent/: agent.py  tools.py
python/agents/auto-insurance-agent/deployment/: deploy.py  test_deployment.py
python/agents/brand-search-optimization/brand_search_optimization/: agent.py
python/agents/brand-search-optimization/deployment/: bq_populate_data.py  test_deployment.py
python/agents/currency-agent/: pyproject.toml
python/agents/currency-agent/currency_agent/: test_client.py
python/agents/currency-agent/mcp-server/: server.py
python/agents/customer-service/: pyproject.toml
python/agents/customer-service/customer_service/: __init__.py  agent.py  config.py  prompts.py
python/agents/customer-service/deployment/: deploy.py
python/agents/customer-service/eval/: test_eval.py
python/agents/data-engineering/: pyproject.toml
python/agents/data-engineering/data_engineering_agent/: agent.py  (+2 more)
python/agents/data-science/: main.py
python/agents/safety-plugins/: pyproject.toml
python/agents/safety-plugins/safety_plugins/: main.py  util.py
python/agents/safety-plugins/safety_plugins/plugins/: agent_as_a_judge.py  model_armor.py
python/agents/short-movie-agents/: pyproject.toml
python/notebooks/grounding/: vectorsearch2_travel_agent.ipynb
(+117 files in other folders)
