[project]
name = "safety-plugins"
version = "0.1.0"
description = "Safety Plugins for ADK"
authors = [
    { name = "sammalik-lgtm", email = "sammalik@google.com" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "absl-py>=2.3.1",
    "google-adk>=1.7.0",
    "google-cloud-modelarmor>=0.2.8",
    "google-genai>=1.5.0",
    "pdfplumber>=0.11.5",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.0",
    "typing-extensions>=4.14.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
]

[tool.ruff]
# Point back to the Master template in the root
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["safety_plugins"]

[tool.hatch.build.targets.wheel]
# Ensure Hatchling finds the safety package even if there's a name collision
packages = ["safety_plugins"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"